# node-abieos

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bun.lockb  eosrio-node-abieos-2.2.0.tgz  eosrio-node-abieos-3.1.0.tgz  package-lock.json  package.json  tsconfig.json  tsup.config.ts  update-version.mjs
.github/workflows/: build.yml
docs/: CONTRIBUTING.md  README.md
examples/: basic.cjs  basic.js  basic.mjs  compare_with_wharfkit.mjs  load_abi_from_blockchain.mjs  nested.mjs  nested2.mjs  real_world_example1.mjs  real_world_example2.mjs  serialization.mjs  spring.mjs  test-variants.mjs  tests.cjs  tests.mjs
examples/ABIs/: eosio.msig.json  eosio.token.json
examples/deno-abieos-test/: deno.json  main.ts
include/eosio/: abi.hpp  crypto.hpp
lib/: abieos.d.ts  abieos.d.ts.map  abieos.js  abieos.node  abieos.ts
scripts/: copy-module.mjs  update-version.mjs
src/: abi.cpp  abieos.hpp  main.cpp
test/: abi_management.test.js  abieos.test.js  basic_types.test.js  complex_types.test.js  data_types.test.js  deserialization.test.js  eosio_specific_types.test.js  serialization.test.js  singleton.test.js  test-helpers.js  type_conversion.test.js
test/utils/: eosio.token.raw  test-helpers.js
